# akson

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml  fuzz.yml
adapters/anthropic/: Cargo.toml
adapters/anthropic/src/: lib.rs  main.rs
adapters/anthropic/tests/: broker_integration.rs
adapters/gemini/: Cargo.toml
adapters/gemini/src/: lib.rs  main.rs
adapters/gemini/tests/: broker_integration.rs
adapters/openai/: Cargo.toml
adapters/openai/src/: lib.rs  main.rs
adapters/openai/tests/: broker_integration.rs
bench/: README.md  bench-matrix.sh  cooperate.sh  keepalive.sh  provision.sh  run-bench.sh  serve.sh  task.json
bench/scenarios/: s1-security.json  s2-offbyone.json  s3-large.json
crates/akson-adapter-sdk/: Cargo.toml
crates/akson-authority/: Cargo.toml
crates/akson-broker/: Cargo.toml
crates/akson-cli/: Cargo.toml
crates/akson-cli/src/: main.rs
crates/akson-contract/: Cargo.toml
crates/akson-crypto/: Cargo.toml
crates/akson-crypto/src/: cert.rs  identity.rs  jws.rs  keypair.rs  keystore.rs  lib.rs  purpose.rs  token.rs
crates/akson-crypto/tests/: token_vectors.rs  vectors.rs
crates/akson-evidence/: Cargo.toml
crates/akson-evidence/src/: intoto.rs  lib.rs  outcome.rs  result_manifest.rs  sarif.rs  slots.rs
crates/akson-evidence/tests/: hostile_sarif.rs
crates/akson-ext/: Cargo.toml
crates/akson-mcp/: Cargo.toml  README.md
crates/akson-mcp/src/: main.rs
crates/akson-pairing/: Cargo.toml
crates/akson-proto/: Cargo.toml
crates/akson-sandbox/: Cargo.toml
crates/akson-sandbox/src/: cgroup.rs  diagnostics.rs  landlock.rs  launcher.rs  lib.rs  mount.rs  namespace.rs  probe.rs  seccomp.rs
crates/akson-store/: Cargo.toml
crates/akson-transport/: Cargo.toml
crates/akson-transport/src/: bootstrap.rs  client.rs  ingress.rs  lib.rs  limits.rs  tls.rs
crates/akson-transport/tests/: bootstrap_e2e.rs  ca_tls.rs  mtls.rs
crates/akson-worker/: Cargo.toml
crates/aksond/: Cargo.toml
crates/aksond/src/: a2a_client.rs  approve.rs  bootstrap.rs  broker.rs  broker_channel.rs  confinement.rs  control.rs  control_dispatch.rs  decision.rs  delivery.rs  introduce.rs  issue.rs  keys.rs  lib.rs  main.rs  outcome.rs  pair_serve.rs  pairing.rs  peercred.rs  reactor.rs  receive.rs  receive_http.rs  receive_serve.rs  receive_server.rs  result.rs  send.rs  socket.rs  worker_run.rs
crates/aksond/tests/: cooperation_e2e.rs  crash_matrix.rs  introduce_e2e.rs  pair_e2e.rs  receive_e2e.rs  wan_keepalive.rs
crates/axon-adapter-sdk/: Cargo.toml
crates/axon-adapter-sdk/src/: conformance.rs  lib.rs  proxy.rs
crates/axon-authority/: Cargo.toml
crates/axon-authority/src/: attempt.rs  capability.rs  lib.rs  policy.rs  work_order.rs
crates/axon-broker/: Cargo.toml
crates/axon-broker/src/: address.rs  call.rs  lib.rs  processor.rs  subattempt.rs
crates/axon-cli/: Cargo.toml
crates/axon-cli/src/: main.rs
crates/axon-contract/: Cargo.toml
crates/axon-contract/src/: chain.rs  contract.rs  decision.rs  expiry.rs  extraction.rs  lib.rs  manifest.rs  proposal.rs  receive.rs  risk_card.rs
crates/axon-contract/tests/: hostile_contract.rs
crates/axon-crypto/: Cargo.toml
crates/axon-evidence/: Cargo.toml
crates/axon-evidence/src/: intoto.rs  lib.rs  outcome.rs  result_manifest.rs  sarif.rs  slots.rs
crates/axon-evidence/tests/: hostile_sarif.rs
crates/axon-ext/: Cargo.toml
crates/axon-ext/src/: dsse.rs  ijson.rs  jcs.rs  lib.rs  namespace.rs  schema.rs
crates/axon-ext/tests/: hostile_ijson.rs  vectors.rs
crates/axon-pairing/: Cargo.toml
crates/axon-pairing/src/: bootstrap.rs  handler.rs  http.rs  invitation.rs  key_binding.rs  lib.rs  lifecycle.rs  session.rs  state_machine.rs  transfer.rs
crates/axon-pairing/tests/: pairing_vectors.rs
crates/axon-proto/: Cargo.toml  build.rs
crates/axon-proto/src/: card_sig.rs  lib.rs  profile.rs
crates/axon-proto/tests/: json_mapping.rs  jws_vectors.rs  profile_vectors.rs  unknown_fields.rs
crates/axon-sandbox/: Cargo.toml
crates/axon-sandbox/src/: cgroup.rs  channel.rs  diagnostics.rs  landlock.rs  launcher.rs  lib.rs  mount.rs  probe.rs  seccomp.rs
crates/axon-store/: Cargo.toml
crates/axon-store/src/: audit.rs  delivery.rs  envelope.rs  lib.rs  schema.rs
crates/axon-store/tests/: delivery_vectors.rs  pairing_ledger.rs  store.rs
crates/axon-transport/: Cargo.toml
crates/axon-transport/src/: bootstrap.rs  client.rs  ingress.rs  lib.rs  limits.rs  tls.rs
crates/axon-transport/tests/: bootstrap_e2e.rs  ca_tls.rs  mtls.rs
crates/axon-worker/: Cargo.toml
crates/axon-worker/src/: gate.rs  inert.rs  lib.rs  staging.rs
crates/axond/: Cargo.toml
crates/axond/src/: a2a_client.rs  approve.rs  bootstrap.rs  broker.rs  broker_channel.rs  confinement.rs  control.rs  control_dispatch.rs  decision.rs  delivery.rs  issue.rs  keys.rs  lib.rs  main.rs  outcome.rs  pair_serve.rs  pairing.rs  peercred.rs  receive.rs  receive_http.rs  receive_serve.rs  receive_server.rs  result.rs  send.rs  socket.rs  worker_run.rs
crates/axond/tests/: cooperation_e2e.rs  crash_matrix.rs  pair_e2e.rs  receive_e2e.rs  wan_keepalive.rs
design/: 2026-07-16-implementation-plan.md  2026-07-16-threads-enterprise-agent-communication.md  2026-07-17-working-groups.md  2026-07-19-agent-harness.md  2026-07-19-threat-model.md  2026-07-21-promotion.md  2026-07-23-identity-token-pairing.md
docs/: 404.html  CNAME  index.html  robots.txt  sitemap.xml
docs/assets/: site.css  site.js
docs/guide/: index.html
docs/internals/: index.html
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: contract.rs  ijson.rs  sarif.rs
harness/: README.md  run-checks.sh
harness/runner/: Cargo.toml
harness/runner/src/: main.rs
harness/runner/tests/: clean_worker_e2e.rs
proof/: .gitignore  Makefile  PROPERTIES.md  README.md  check.sh  inductive.sh  negative-checks.sh
proof/conformance/: Cargo.toml
proof/conformance/src/: lib.rs
spec/: control-protocol.md
spec/a2a/: PIN  (+2 more)
xcheck/: README.md  requirements.txt  run.py
(+198 files in other folders)
