[workspace]
resolver = "2"
members = [
    "crates/axon-proto",
    "crates/axon-ext",
    "crates/axon-crypto",
    "crates/axon-store",
    "crates/axon-transport",
    "crates/axon-pairing",
    "crates/axon-contract",
    "crates/axon-authority",
    "crates/axon-sandbox",
    "crates/axon-worker",
    "crates/axon-broker",
    "crates/axon-evidence",
    "crates/axond",
    "crates/axon-cli",
    "crates/axon-adapter-sdk",
    "adapters/openai",
    "adapters/anthropic",
    "harness/runner",
]
# The cargo-fuzz crate needs nightly + libFuzzer; keep it out of the normal build.
exclude = ["fuzz"]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/zarbafian/axon"
rust-version = "1.85"

[workspace.dependencies]
# Internal crates
axon-proto = { path = "crates/axon-proto" }
axon-ext = { path = "crates/axon-ext" }
axon-crypto = { path = "crates/axon-crypto" }
axon-store = { path = "crates/axon-store" }
axon-transport = { path = "crates/axon-transport" }
axon-pairing = { path = "crates/axon-pairing" }
axon-contract = { path = "crates/axon-contract" }
axon-authority = { path = "crates/axon-authority" }
axon-sandbox = { path = "crates/axon-sandbox" }
axon-worker = { path = "crates/axon-worker" }
axon-broker = { path = "crates/axon-broker" }
axon-evidence = { path = "crates/axon-evidence" }
axon-adapter-sdk = { path = "crates/axon-adapter-sdk" }
axond = { path = "crates/axond" }

# External (pinned minor versions; exact pins live in Cargo.lock, committed)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json-canon = "0.1"
# default-features off: keeps the remote-$ref HTTP resolver (reqwest) out of
# the tree — schema compilation must never be able to fetch anything.
jsonschema = { version = "0.30", default-features = false }
ed25519-dalek = { version = "2.2", features = ["rand_core", "pkcs8"] }
rand = "0.8"
# Self-issued endpoint certificates (ADR-0011): pure-Rust X.509 to match the
# rustls-rustcrypto provider choice.
x509-cert = { version = "0.2", features = ["builder"] }
# TLS 1.3 stack (ADR-0011): rustls with the pure-Rust rustls-rustcrypto
# provider; default features off drops the C aws-lc-rs default and TLS 1.2.
rustls = { version = "0.23", default-features = false, features = ["std"] }
rustls-rustcrypto = { version = "0.0.2-alpha", default-features = false, features = ["std"] }
rustls-pki-types = "1"
# Mozilla CA root bundle (compiled-in, pure data) for validating PUBLIC
# processor endpoints that use CA-signed certs rather than a pinned self-signed
# cert — see broker::HttpsTransport.
webpki-roots = "0.26"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "time"] }
tokio-rustls = { version = "0.26", default-features = false }
hyper = { version = "1", features = ["server", "client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
url = "2"
# Storage (ADR-0003) and envelope encryption (ADR-0005).
rusqlite = { version = "0.32", features = ["bundled"] }
chacha20poly1305 = "0.10"
sha2 = "0.10"
hmac = "0.12"
# Constant-time comparison for the pairing bearer-secret verifier (§8.2).
subtle = "2"
base64 = "0.22"
hex = "0.4"
thiserror = "2.0"
uuid = { version = "1.17", features = ["v4"] }
tempfile = "3"
# A2A codegen (ADR-0002): protox compiles the vendored protos without a
# system protoc or network; pbjson supplies the standard proto3 JSON mapping.
prost = "0.14"
prost-types = "0.14"
prost-build = "0.14"
pbjson = "0.9"
pbjson-types = "0.9"
pbjson-build = "0.9"
protox = "0.9"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
