[package]
name = "akson-adapter-gemini"
publish = false
description = "A Google Gemini (generateContent API) worker adapter via the broker"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "akson-adapter-gemini"
path = "src/main.rs"

[dependencies]
akson-adapter-sdk = { workspace = true }
akson-evidence = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
akson-sandbox = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[lints]
workspace = true
