[package]
name = "akson-adapter-openai"
publish = false
description = "An OpenAI-compatible worker adapter (chat completions via the broker)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "akson-adapter-openai"
path = "src/main.rs"

[dependencies]
akson-adapter-sdk = { workspace = true }
akson-evidence = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
akson-sandbox = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[lints]
workspace = true
