[package]
name = "akson-cli"
publish = false
description = "The Akson operator CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "akson"
path = "src/main.rs"

[dependencies]
akson-sandbox = { workspace = true }
aksond = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }

[lints]
workspace = true
