[package]
name = "akson-crypto"
publish = false
description = "Key lifecycle, purpose binding, thumbprints, JWS, keystore adapters (thin wrappers over reviewed libraries)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
json-canon = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
x509-cert = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hex = { workspace = true }

[lints]
workspace = true
