[package]
name = "akson-evidence"
publish = false
description = "Result manifest, in-toto statements, SARIF profile, evidence validation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
akson-ext = { workspace = true }
akson-crypto = { workspace = true }
akson-contract = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
