[package]
name = "akson-sandbox"
publish = false
description = "Linux isolation launcher: namespaces, seccomp, cgroups v2, Landlock; fail-closed capability probing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
landlock = "0.4.5"
libc = "0.2.186"
seccompiler = "0.5.0"
thiserror = { workspace = true }

[lints]
workspace = true
