[package]
name = "akson-transport"
publish = false
description = "A2A HTTP+JSON server/client on the pinned TLS 1.3 mTLS profile with the Akson delivery extension"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
akson-crypto = { workspace = true }
akson-proto = { workspace = true }
akson-store = { workspace = true }
akson-pairing = { workspace = true }
rustls = { workspace = true }
rustls-rustcrypto = { workspace = true }
rustls-pki-types = { workspace = true }
webpki-roots = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
