[package]
name = "axon-authority"
publish = false
description = "Local policy, capability vector, one-shot work orders"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
