[package]
name = "axon-broker"
publish = false
description = "Processor broker with durable sub-attempts; the only egress path for approved plaintext"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]

[lints]
workspace = true
