[package]
name = "axon-cli"
publish = false
description = "The Axon operator CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "axon"
path = "src/main.rs"

[dependencies]

[lints]
workspace = true
