[package]
name = "axon-contract"
publish = false
description = "Contract validation, revision chain, decisions, risk-card projection"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]

[lints]
workspace = true
