[package]
name = "axon-contract"
publish = false
description = "Contract validation, revision chain, decisions, risk-card projection"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axon-ext = { workspace = true }
axon-crypto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ed25519-dalek = { workspace = true }
base64 = { workspace = true }

[lints]
workspace = true
