[package]
name = "axon-ext"
description = "Axon extension schemas, I-JSON, JCS canonicalization, DSSE envelopes, golden vectors"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
json-canon = { workspace = true }
jsonschema = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
axon-crypto = { workspace = true }
hex = { workspace = true }

[lints]
workspace = true
