[package]
name = "axon-pairing"
publish = false
description = "Invitation, bootstrap endpoint, pending-to-active pairing, re-pair and removal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]

[lints]
workspace = true
