[package]
name = "axon-pairing"
publish = false
description = "Invitation, bootstrap endpoint, pending-to-active pairing, re-pair and removal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axon-crypto = { workspace = true }
axon-ext = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ed25519-dalek = { workspace = true }
hex = { workspace = true }

[lints]
workspace = true
