[package]
name = "axon-pairing"
publish = false
description = "Invitation, bootstrap endpoint, pending-to-active pairing, re-pair and removal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axon-crypto = { workspace = true }
axon-ext = { workspace = true }
axon-proto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
json-canon = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
