[package]
name = "axon-proto"
publish = false
description = "Pinned A2A types, JSON mapping, and profile validation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
prost = { workspace = true }
pbjson = { workspace = true }
pbjson-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
json-canon = { workspace = true }
axon-crypto = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
sha2 = { workspace = true }
hex = { workspace = true }

[build-dependencies]
prost = { workspace = true }
prost-build = { workspace = true }
pbjson-build = { workspace = true }
protox = { workspace = true }

[lints]
workspace = true
