[package]
name = "axon-store"
description = "Encrypted SQLite state, outbox/inbox, replay tombstones, audit chain, state-generation checkpoint"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]

[lints]
workspace = true
