[package]
name = "axon-store"
publish = false
description = "Encrypted SQLite state, outbox/inbox, replay tombstones, audit chain, state-generation checkpoint"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axon-crypto = { workspace = true }
axon-pairing = { workspace = true }
rusqlite = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
base64 = { workspace = true }
json-canon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ed25519-dalek = { workspace = true }
hex = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
