[package]
name = "axon-transport"
publish = false
description = "A2A HTTP+JSON server/client on the pinned TLS 1.3 mTLS profile with the Axon delivery extension"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axon-crypto = { workspace = true }
axon-proto = { workspace = true }
axon-store = { workspace = true }
rustls = { workspace = true }
rustls-rustcrypto = { workspace = true }
rustls-pki-types = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-rustls = { workspace = true }

[lints]
workspace = true
