[package]
name = "axon-worker"
publish = false
description = "Clean worker protocol and output gate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axon-authority = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
