[package]
name = "axond"
publish = false
description = "The Axon daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "axond"
path = "src/lib.rs"

[[bin]]
name = "axond"
path = "src/main.rs"

[dependencies]
axon-sandbox = { workspace = true }
axon-store = { workspace = true }
axon-contract = { workspace = true }
axon-authority = { workspace = true }
axon-evidence = { workspace = true }
axon-worker = { workspace = true }
axon-proto = { workspace = true }
axon-crypto = { workspace = true }
axon-ext = { workspace = true }
axon-transport = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
libc = "0.2.186"
tokio = { workspace = true }
tokio-rustls = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
time = { workspace = true }
sha2 = { workspace = true }
url = { workspace = true }

[dev-dependencies]
hex = { workspace = true }

[lints]
workspace = true
