[package]
name = "akson-harness"
publish = false
description = "Interop test harness: runnable endpoints for multi-endpoint scenarios (FOSS, container-agnostic)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "akson-harness"
path = "src/main.rs"

[dependencies]
akson-crypto = { workspace = true }
akson-proto = { workspace = true }
akson-pairing = { workspace = true }
akson-transport = { workspace = true }
akson-store = { workspace = true }
akson-ext = { workspace = true }
akson-contract = { workspace = true }
aksond = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }

# The clean-worker end-to-end demo (tests/clean_worker_e2e.rs) composes the M8
# authority + M9 sandbox/worker pipeline. Test-only, never shipped.
[dev-dependencies]
akson-authority = { workspace = true }
akson-sandbox = { workspace = true }
akson-worker = { workspace = true }

[lints]
workspace = true
